<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg_start"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_signup"
        android:textSize="26sp"
        android:textColor="#FF242121"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_personal_information"
        android:textSize="20sp"
        android:textColor="#FF242121"
        android:gravity="center"
        android:background="#FFebebeb"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            >
            <EditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_username"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editUserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_userid"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="#FFbcbcbc"
                android:textColor="#FF000000"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

            <EditText
                    android:id="@+id/editRePassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lbl_re_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="#FFbcbcbc"
                    android:textColor="#FF000000"
                    android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ripTxtGotoSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleColor="#000000"
            app:mrl_rippleAlpha="0.2"
            app:mrl_rippleDelayClick="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:id="@+id/txtHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="16sp"
                android:textColor="#FF000000"
                android:text="@string/btn_have_account" />
        </com.balysv.materialripple.MaterialRippleLayout>
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_signup"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@drawable/background_rounded_green"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

</LinearLayout>
