<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_start"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingBottom="50dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/splash_logo"
            android:layout_gravity="center"/>
    </FrameLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_userid"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/white"
            android:textColor="#FF000000"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_password"
            android:imeActionId="6"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="#FFbcbcbc"
            android:textColor="#FF000000"
            android:textSize="16sp"/>

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login_send"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/background_rounded_green"
        android:layout_marginTop="25dp"/>
    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/ripTxtGotoSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:mrl_rippleOverlay="true"
        app:mrl_rippleColor="#000000"
        app:mrl_rippleAlpha="0.2"
        app:mrl_rippleDelayClick="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/txtHavenotAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="#FF000000"
            android:text="@string/btn_have_not_account" />
    </com.balysv.materialripple.MaterialRippleLayout>

</LinearLayout>
